# wiggum

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: cc-guide.md
.claude/agents/researcher/: codebase-researcher.md  cross-project-researcher.md  web-researcher.md
.claude/hooks/: claude-notify.sh  log-skill-invocation.sh  redirect-builtin-agent.sh
.claude/rules/: agent-conventions.md  code-conventions.md  hook-conventions.md  plugin-dependency.md  plugin-skill-conventions.md  prompt-engineering.md  python-conventions.md  shell-scripts-conventions.md  single-source-of-truth.md  skill-conventions.md  text-semantics.md  text-syntax.md  verify-before-assuming.md
.claude/scripts/: issue-create.sh  issue-edit.sh  issue-view.sh  pr-fetch-comments.sh  resolve-base-branch.sh
.claude/skills/commit/: SKILL.md
.claude/skills/create-branch/: SKILL.md
.claude/skills/create-branch/scripts/: issue-view.sh  resolve-base-branch.sh  setup-branch.sh
.claude/skills/create-issue/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/fix-pr-ci/: SKILL.md
.claude/skills/quick-push/: SKILL.md
.claude/skills/rebase-resolve-conflicts/: SKILL.md
.claude/skills/rebase-resolve-conflicts/scripts/: rebase-setup.sh
.claude/skills/refine-issue/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/review-pr/scripts/: fetch-review-state.sh  pr-fetch-threads.sh
.claude/skills/view-issue/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-epic.yml  2-story.yml  3-task.yml  4-bug.yml
.github/workflows/: ci.yml  pr-autofix-title.yml  pr-issue-link.yml
.wiggum/: config.toml
.wiggum/implementation/10/: IMPLEMENTATION_PLAN.md  PROGRESS.md
.wiggum/specs/10/: RESEARCH.md  wiggum-run.md
.wiggum/specs/10/research/: RESEARCH.md  a1b2c3d4-cli-skeleton-cyclopts.md  a8b9c0d1-wiggum-design-doc.md  b3c4d5e6-ralph-bootstrap-script.md  b9c0d1e2-toml-config-pydantic.md  c0d1e2f3-sigint-subprocess-handling.md  c4d5e6f7-wiggum-config-structure.md  d5e6f7a8-plugin-skills-agents.md  e6f7a8b9-ralph-loop-guide.md  f7a8b9c0-cyclopts-subcommands.md
docs/: .gitignore
docs/agent-rules/: shell-scripts-conventions.md  text-semantics.md  text-syntax.md
plugins/wiggum-util/.claude-plugin/: plugin.json
plugins/wiggum-util/agents/: claude-code-guide.md
plugins/wiggum-util/hooks/: hooks.json
plugins/wiggum-util/scripts/: find-branch.sh  guard-destructive-commands.sh  pr-fetch-threads.sh  redirect-builtin-agent.sh
plugins/wiggum-util/skills/fix-pr-ci/: SKILL.md
plugins/wiggum-util/skills/fix-pr-ci/scripts/: fetch-failing-checks.sh
plugins/wiggum-util/skills/quick-push/: SKILL.md
plugins/wiggum-util/skills/rebase-resolve-conflicts/: SKILL.md
plugins/wiggum-util/skills/rebase-resolve-conflicts/scripts/: resolve-base-branch.sh
plugins/wiggum-util/skills/review-pr/: SKILL.md
plugins/wiggum-util/skills/review-pr/scripts/: pr-fetch-comments.sh  pr-resolve-thread.sh
plugins/wiggum-util/skills/view-issue/: SKILL.md
plugins/wiggum-util/skills/view-issue/scripts/: issue-view.sh
plugins/wiggum/.claude-plugin/: plugin.json
plugins/wiggum/agents/: prd-writer.md
plugins/wiggum/agents/researcher/: codebase-researcher.md  cross-project-researcher.md  web-researcher.md
plugins/wiggum/hooks/: hooks.json
plugins/wiggum/scripts/: claude-dev.sh  fetch-issue.sh  pr-link-issue.sh  session-launch.sh  tmux-kill-window.sh  tmux-send.sh  tmux-wait.sh  validate-pr-body.sh  worktree-remove.sh
plugins/wiggum/skills/commit/: SKILL.md
plugins/wiggum/skills/commit/scripts/: check-push-status.sh
plugins/wiggum/skills/create-branch/scripts/: issue-view.sh  resolve-base-branch.sh
plugins/wiggum/skills/create-feature-prd/: SKILL.md  session-launch.sh
plugins/wiggum/skills/create-issue/: SKILL.md
plugins/wiggum/skills/create-issue/scripts/: issue-create.sh
plugins/wiggum/skills/create-pr/: SKILL.md
plugins/wiggum/skills/create-pr/scripts/: pr-link-issue.sh  push-branch.sh
plugins/wiggum/skills/feature-propose/: SKILL.md
plugins/wiggum/skills/feature-propose/scripts/: session-launch.sh
plugins/wiggum/skills/feature-stop-work-on/: SKILL.md
plugins/wiggum/skills/feature-stop-work-on/scripts/: tmux-kill-window.sh  worktree-remove.sh
plugins/wiggum/skills/feature-work-on/: SKILL.md
plugins/wiggum/skills/feature-work-on/scripts/: tmux-send.sh  tmux-wait.sh
plugins/wiggum/skills/prd-close/: SKILL.md
plugins/wiggum/skills/prd-close/scripts/: prd-close.sh
plugins/wiggum/skills/prd-create/: SKILL.md
plugins/wiggum/skills/prd-review/: SKILL.md
plugins/wiggum/skills/prd-review/scripts/: fetch-issue.sh
plugins/wiggum/skills/propose-feature/: SKILL.md
plugins/wiggum/skills/review-feature-prd/: SKILL.md  fetch-issue.sh
samples/ralph-bootstrap/: .gitignore  agent-prompt.md  convert-prd-prompt.md  ralph.sh
scripts/: ralph-minimal.sh
src/wiggum/: checks.py  cli.py  config.py  impl_dir.py  interrupt.py  json_extract.py  loop.py  outer_loop.py  plan.py  priority.py  progress.py  prompts.py  runner.py  subprocess_util.py  worktree.py
src/wiggum/agent/: __init__.py  shell.py
src/wiggum/git/: __init__.py  models.py  port.py  shell.py
src/wiggum/prompts/: __init__.py  gaps.md  green.md  preamble.md  red.md  reorganize.md  select.md  triage.md  verify.md
src/wiggum/templates/: __init__.py  build.md  plan.md
tests/: test_checks.py  test_cli.py  test_config.py  test_dependencies.py  test_impl_dir.py  test_interrupt.py  test_json_extract.py  test_loop.py  test_outer_loop.py  test_package_naming.py  test_plan.py  test_priority.py  test_progress.py  test_prompts.py  test_runner.py  test_subprocess_util.py  test_triage.py  test_worktree.py
tests/agent/: test_init.py  test_shell.py
tests/git/: test_init.py  test_models.py  test_port.py  test_shell.py
tests/prompts/: test_green_prompt.py  test_load.py  test_prompt_parity.py  test_prompts.py
